[package]
name = "wqm-can"
version = "0.0.1"
authors = ["smolkov <asmolkov@lar.com>"]
edition = "2018"
description = "can4linux binding"
keywords = ["wqa", "system","can", "information"]
categories = ["can" ]
repository = "https://github.com/lar-ag/wqm-can"
readme = "README.md"
license = "Apache-2.0 OR MIT"
build = "build.rs"

[package.metadata.docs.rs]
features = ["doc"]


[package.metadata.deb]
maintainer = "Smolkov <asmolkov@lar.com>"
copyright = "2019, LAR"
depends = "$auto, systemd"
conf-files = ["/usr/local/etc/canbus.toml", "/etc/systemd/system/canbus-server.service"]
extended-description = """\
Canbus binding.\
"""
section = "admin"
priority = "optional"
assets = [
    ["target/release/edinburg", "/usr/local/bin/", "755"],
    ["assets/edinburgh.toml", "/usr/local/etc/", "644"],
    ["assets/edinburgh-server.service", "/etc/systemd/system/", "644"],
]




[badges]
maintenance = { status = "experimental" }


[dependencies]
log = "0.4.6"
ron = "0.5.1"
# Serializer
serde_json = "1.0"
serde = {version = "1.0.94", features = ["derive"]}
serde_derive = "1.0.94"


bincode = "1.1.4"
lazy_static = "1.3.0"
socketcan = "1.7.0"
failure = "0.1.5"
futures-preview = { version = "0.3.0-alpha.17", features = ["async-await", "nightly"] }
fs2 = "0.4.3"
heapless = "0.5.0-alpha.2"
# tarpc = "0.18.0"
scopeguard = "1.0.0"
jsonrpc-core = "12.0.0"
jsonrpc = "0.11.0"
jsonrpc-derive = "12.0.0"


# tarpc = "0.18.0"
runtime = "0.3.0-alpha.6"
tide = "0.2.0"
jsonrpc-core-client = "12.0.0"
log4rs = "0.8.3"
http = "0.1.17"
paw = "1.0.0"
# bitflags = "1.1.0"

[build-dependencies]
cc = "1.0"


[features]
doc = []
